--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
 
   <body>
@@ -20,24 +24,28 @@
         class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg"
       >
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3" id="mydiv">
-          <h1 class="display-4 fw-bold lh-1">Coding Fonts</h1>
-          <p class="lead">
+          <h1
+            class="display-4 fw-bold lh-1 animate__animated animate__fadeInDown"
+          >
+            Coding Fonts
+          </h1>
+          <p class="lead animate__animated animate__fadeInUp">
             These are coding fonts that I think look really good; feel free to
-            go ahead and download 'em!
+            go ahead and download!
           </p>
           <div
             class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3"
           >
             <div class="dropdown-center">
               <button
-                class="btn btn-primary btn-lg px-4 me-md-2 fw-bold dropdown-toggle"
+                class="btn btn-primary btn-lg px-4 me-md-2 fw-bold dropdown-toggle animate__animated animate__fadeInRight"
                 type="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
                 Download
               </button>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu dropdown-menu-animated">
                 <li>
                   <a class="dropdown-item" href="fonts/cartograph-cf.zip"
                     >Cartograph CF</a
@@ -64,7 +72,7 @@
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
           <img
-            class="rounded-lg-3"
+            class="rounded-lg-3 animate__animated animate__fadeIn"
             src="img/light/scr.png"
             alt="screenshot"
             width="1200"
