--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+        <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg blur-load" style="background-image: url(img/light/scr-small.png);">
           <img
             class="rounded-lg-3 animate__animated animate__fadeIn"
             src="img/light/scr.png"
             alt="screenshot"
             width="1200"
             id="screenshot"
+            loading="lazy"
           />
         </div>
       </div>
